# musescore-downloader

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: test-download.yaml  test-macos.yaml  test-ubuntu.yaml  test-windows.yaml  test.yaml
musescore_downloader/: __init__.py  config_handler.py  interface.py  log_handler.py
musescore_downloader/common/: constants.py  defaults.py  utils.py
musescore_downloader/common/exceptions/: __init__.py  core.py  web_scraper.py
musescore_downloader/common/types/: __init__.py  content_object.py  save_complete_object.py  score_scraper_result.py
musescore_downloader/core/: __init__.py  delete_pagefiles.py  download_score.py  generate_pdf.py  initializers.py  save_pages.py  scrape_pages.py  scrape_score.py  validate_input.py
musescore_downloader/core/interfaces/: __init__.py  api.py  cli.py
musescore_downloader/core/utils/: __init__.py  delete_pagefiles.py  generate_pdf.py  save_pages.py  scrape_pages.py  scrape_score.py  validate_input.py
musescore_downloader/core/validation/: __init__.py  (+11 more)
musescore_downloader/file_generation/: __init__.py  page_saver.py  pdf_generator.py
musescore_downloader/managers/: __init__.py  path_manager.py  selectors_manager.py
musescore_downloader/web_scraper/: Untitled-1.ipynb  __init__.py  page_file_scraper.py  score_scraper.py  selector_generators.py  selectors_generators.py
tests/: conftest.py  test_core.py
tests/core/: interface_test.py  test_main.py  validation_test.py
tests/web_scraper/: conftest.py  score_scraper_test.py
(+10 files in other folders)
