[project]
name = "musescore-downloader"
version = "1.0.0"
dependencies = []
description = "A web scraper for scraping a music sheet from Musescore."
readme = "README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
musescore-downloader = "musescore_downloader:cli_main"

[tool.setuptools.packages]
find = {}
